--- a/styles/global.css
+++ b/styles/global.css
@@ -1,23 +1,21 @@
 * {
-    padding: 0;
+    padding:0;
     margin: 0;
     box-sizing: border-box;
   }
 
-header{
-    background-color: #C36839;
-    margin: auto -16px;
-    padding: 16px 32px; 
-}
-
-header h1{
-    color: #7EB5A6;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
+h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 60px;
 }
 
 body{
-    background-color: #E8D0B3;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    background-color: #000;
+    color: #fff;
 }
 
 footer {
@@ -25,9 +23,4 @@ footer {
     text-align: center;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
-}
-
-.IconButton{
-    color: #7EB5A6;
 }
