--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,6 @@
 * {
     padding:0;
-    margin: 0;
+    margin-top: 2%;
     box-sizing: border-box;
   }
 
@@ -14,7 +14,7 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    background-color: #000;
+    background-color: #212020;
     color: #fff;
 }
 
