--- a/styles/global.css
+++ b/styles/global.css
@@ -1,26 +1,99 @@
 * {
-    padding:0;
-    margin-top: 2%;
-    box-sizing: border-box;
-  }
-
-h1{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 60px;
+  box-sizing: border-box;
 }
 
-body{
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    background-color: #212020;
-    color: #fff;
+html,
+body,
+#__next {
+  height: 100vh;
 }
 
-footer {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 60px;
+}
+
+h2,
+h4 {
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  background-color: #212020;
+  color: #fff;
+}
+
+header {
+  margin-top: 2%;
+}
+
+.holder {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer {
+  text-align: center;
+  padding-top: 20px;
+}
+
+.rowTop {
+  padding-top: 50px;
+}
+
+.buttonColor {
+  color: #757575;
+}
+
+.buttonColor:hover {
+  color: #7eb5a6;
+}
+
+.customLink {
+  font-size: large;
+}
+
+.links {
+  color: #fff;
+}
+
+.links:hover {
+  color: #7eb5a6;
+}
+
+.homeLink {
+  text-decoration: none;
+  font-weight: 100;
+}
+
+.homeText {
+  text-align: right;
+}
+
+.workItem {
+  float: left;
+}
+
+.workImageLeft {
+  float: left;
+  margin-top: 0;
+  margin-right: 10px;
+}
+
+.workButton {
+  font-size: 20px;
+  color: #757575;
+  border-color: #757575;
+  position: relative;
+}
+
+.workButton:hover {
+  color: #fff;
+  background-color: #7eb5a6;
+  border-color: #fff;
 }
